<resources>
    <string name="app_name">Scrum Planning</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_room">create a room</string>
    <string name="join_room">join a room</string>
    <string name="scrum_planning">Scrum Planning</string>
    <string name="room_title">Room Title</string>
    <string name="room_description">Room Description</string>
    <string name="creator_name">Creator Name</string>
    <string name="create_a_new_room">Create A New Room</string>
    <string name="join_an_existing_room">Join An Existing Room</string>
    <string name="room_id">Room ID</string>
    <string name="participant_name">Participant Name</string>
</resources>
