<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="createRoomViewModel"
            type="com.scrumplanning.create.CreateRoomViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            android:text="@string/create_a_new_room"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_room_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:hint="@string/room_title"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/edt_room_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:hint="@string/room_description"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/edt_creator_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:hint="@string/creator_name"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btn_create"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> createRoomViewModel.onRoomCreate()}"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:text="@string/create_room" />

    </LinearLayout>
</layout>