<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="joinRoomViewModel"
            type="com.scrumplanning.ui.join.JoinRoomViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            android:text="@string/join_an_existing_room"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:hint="@string/room_id">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:hint="@string/participant_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_join"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:background="@drawable/btn_rounded_empty"
            android:onClick="@{() -> joinRoomViewModel.onJoin()}"
            android:text="@string/create_room" />


    </LinearLayout>
</layout>