<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="joinOrCreateViewModel"
            type="com.scrumplanning.joinorcreate.JoinOrCreateViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/scrum_planning"
            android:textSize="16sp" />

        <Button
            android:id="@+id/join_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:onClick="@{() -> joinOrCreateViewModel.onJoin()}"
            android:text="@string/join_room" />

        <Button
            android:id="@+id/create_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_margin"
            android:onClick="@{() -> joinOrCreateViewModel.onCreate()}"
            android:layout_marginRight="@dimen/medium_margin"
            android:text="@string/create_room" />
    </LinearLayout>
</layout>